Se ha creado un encabezado flexible a distintos tipos de pantallas

--- a/index.html
+++ b/index.html
@@ -3,73 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="estilo.css" />
     <title>Clothing Store</title>
   </head>
   <body>
-    <header class="header">
-      <!--topBar-->
-      <div class="topBar">
-        <div class="topBarLeft">
-          <img
-            src="./assets/logoConFondo.jpg"
-            alt="Logo de tienda Clothing Store"
-          />
-        </div>
-        <div class="topBarRight">
-          <a href="./index.html"
-            ><img src="./assets/location.png" alt="Icono de Locación"
-          /></a>
-        </div>
+  <header>
+    <div class="header">
+      <!--Logo-->
+      <div class="contenedorLogo">
+        <img src="./assets/imagenes/nuevoLogo.png">
       </div>
-      <!---->
-      <!--ENCABEZADO-->
-      <div class="encabezado">
-        <div class="contenedorLogo">
-          <a href="./index.html"
-            ><img
-              src="./assets/logoSinFondo.png"
-              alt="Logo de tienda Clothing Store"
-          /></a>
-        </div>
+      <!--Items usuario-->
+      <div class="contenedorUsuario">
+        <img src="./assets/imagenes/corazon.png" alt="Icono corazón">
+        <a>Favoritos</a>
+        <img src="./assets/imagenes/perfil.png" alt="Icono perfil">
+        <a>Mi cuenta</a>
+      </div>
+      <div class="contenedorBuscador"> 
         <!--Buscador-->
         <div class="contenedorBuscador">
           <input
             type="text"
-            id="search"
-            placeholder="Buscar..."
-            class="search-input"
+            class="text-input"
+            placeholder="Busca un producto"
           />
-        </div>
-        <!--favoritos-->
-        <div class="contenedorFavoritos">
-          <a href="./index.html"><img src="./assets/corazon.png" />Favoritos</a>
-        </div>
-        <!--Perfil-->
-        <div class="contenedorPerfil">
-          <a href="./login.html"><img src="./assets/perfil.png" />Cuenta</a>
+          <button class="submit-button">Buscar</button>
         </div>
       </div>
-      <!--Categorias-->
-      <div class="contenedorCategorias">
-        <div class="menu">
-          <a href="./index.html"><p>Hombre</p></a>
-          <a href="./index.html"><p>Mujer</p></a>
-          <a href="./index.html"><p>Niños</p></a>
-          <a href="./index.html"><p>Deportes</p></a>
-          <a href="./index.html"><p>Marcas</p></a>
-          <button>OFERTAS!</button>
-        </div>
-      </div>
-    </header>
+    </div>
+  </header>
+
+
+
+
+
+
+
+
+
+
+
+
+    
     <main>
-      <!--BannerPromo-->
+    <!--<main>
+      BannerPromo
       <div class="promo">
         <a href="./index.html"
           ><img src="./assets/promo.png" alt="Banner de promociones"
         /></a>
-      </div>
-      <!--Marcas-->
+      </div>-->
+      <!--Marcas
       <div class="contenedorMarcas">
         <div class="contenedorTexto">
           <a href="./index.html"><h1>Marcas</h1></a>
@@ -90,8 +75,8 @@
           <a href="./index.html"
             ><img src="./assets/fila.png" alt="Logo Adidas"
           /></a>
-        </div>
-        <!--Nuevos lanzamientos-->
+        </div>-->
+        <!--Nuevos lanzamientos
         <div class="contenedorNuevosLanzamientos">
           <div class="bannerNuevoLanzamientos">
             <img
@@ -121,8 +106,8 @@
           </div>
         </div>
       </div>
-    </main>
-    <!--Pie de pagina-->
+    </main>-->
+    <!--Pie de pagina
     <footer>
       <div class="pieDePagina">
         <div class="contenedorLogoPieDePagina">
@@ -156,6 +141,6 @@
       <div class="copyright">
         <p>©CLOTHING STORE - TODOS LOS DERECHOS RESERVADOS</p>
       </div>
-    </footer>
+    </footer>-->
   </body>
 </html>
