Se agrego categorias con capacidad de respuesta correctamente

--- a/index.html
+++ b/index.html
@@ -32,28 +32,40 @@
         </div>
       </div>
     </div>
-  </header>
-
-
-
-
-
-
-
-
-
-
-
-
-    
+  </header>    
     <main>
-    <!--<main>
-      BannerPromo
-      <div class="promo">
-        <a href="./index.html"
-          ><img src="./assets/promo.png" alt="Banner de promociones"
-        /></a>
-      </div>-->
+      <!--Categorias-->
+      <div class="contenedorCategorias">
+        <div class="menu">
+          <a href="./index.html">Hombre</a>
+          <a href="./index.html">Mujer</a>
+          <a href="./index.html">Niños</a>
+          <a href="./index.html">Deportes</a>
+          <a href="./index.html">Marcas</a>
+          <button>OFERTAS!</button>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <!--Marcas
       <div class="contenedorMarcas">
         <div class="contenedorTexto">
