Se ha agregado banner responsive correctamente

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <button>OFERTAS!</button>
         </div>
       </div>
+      <div class="contenedorBanner">
+        <img src="./assets/imagenes/gifBanner.gif" alt="gif ofertas de verano">
+      </div>
 
 
 
