--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="estilo.css" />
+    <!--Fuentes-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Clothing Store</title>
   </head>
   <body>
@@ -16,7 +20,7 @@
       <!--Items usuario-->
       <div class="contenedorUsuario">
         <img src="./assets/imagenes/corazon.png" alt="Icono corazón">
-        <a>Favoritos</a>
+        <a class="roboto">Favoritos</a>
         <img src="./assets/imagenes/perfil.png" alt="Icono perfil">
         <a>Mi cuenta</a>
       </div>
@@ -45,9 +49,18 @@
           <button>OFERTAS!</button>
         </div>
       </div>
+      <!--Banner-->
       <div class="contenedorBanner">
         <img src="./assets/imagenes/gifBanner.gif" alt="gif ofertas de verano">
       </div>
+     <!--Logos de marcas-->
+     <div class="contenedorMarcas">
+      <img src="./assets/imagenes/Nike.png" alt="Logo Nike" />
+      <img src="./assets/imagenes/puma.png" alt="Logo Puma" />
+      <img src="./assets/imagenes/adidas.png" alt="Logo Adidas" />
+      <img src="./assets/imagenes/Topper.png" alt="Logo Topper" />
+      <img src="./assets/imagenes/fila.png" alt="Logo Fila" />
+    </div>
 
 
 
