Se agrego cartel de marcas

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
       <div class="contenedorBanner">
         <img src="./assets/imagenes/gifBanner.gif" alt="gif ofertas de verano">
       </div>
+      <!--Marcas-->
+      <div class="cartelMarcas">
+        <p>Marcas</p>
+      </div>
      <!--Logos de marcas-->
      <div class="contenedorMarcas">
       <img src="./assets/imagenes/Nike.png" alt="Logo Nike" />
@@ -65,45 +69,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      <!--Marcas
-      <div class="contenedorMarcas">
-        <div class="contenedorTexto">
-          <a href="./index.html"><h1>Marcas</h1></a>
-        </div>
-        <div class="contenedorImagenesMarcas">
-          <a href="./index.html"
-            ><img src="./assets/adidas.png" alt="Logo Adidas"
-          /></a>
-          <a href="./index.html"
-            ><img src="./assets/Nike.png" alt="Logo Nike"
-          /></a>
-          <a href="./index.html"
-            ><img src="./assets/puma.png" alt="Logo Puma"
-          /></a>
-          <a href="./index.html"
-            ><img src="./assets/Topper.png" alt="Logo Adidas"
-          /></a>
-          <a href="./index.html"
-            ><img src="./assets/fila.png" alt="Logo Adidas"
-          /></a>
-        </div>-->
         <!--Nuevos lanzamientos
         <div class="contenedorNuevosLanzamientos">
           <div class="bannerNuevoLanzamientos">
