--- a/index.html
+++ b/index.html
@@ -65,6 +65,70 @@
       <img src="./assets/imagenes/Topper.png" alt="Logo Topper" />
       <img src="./assets/imagenes/fila.png" alt="Logo Fila" />
     </div>
+    <!--Nuevos lanzamientos-->
+    <div class="main-container">
+      <div class="banner">
+        <img src="./assets/imagenes/nuevoLanzamientos.png" />
+      </div>
+      <div class="products">
+        <div class="product">
+          <a href="./producto.html"
+            ><img
+              src="./assets/imagenes/adidasZamba.png"
+              alt="Zapatilla Adidas blanca"
+            />
+          </a>
+          <h3>Zapatillas tennis zamba GS BG</h3>
+          <p>6 Cuotas sin interes de <b>$30.000,00</b></p>
+          <p>$180000</p>
+        </div>
+        <div class="product">
+          <img
+            src="./assets/imagenes/zapatillaAdidasAzul.png"
+            alt="Zapatilla Adidas azul"
+          />
+          <h3>Zapatillas deportivas Adidas azul</h3>
+          <p>6 Cuotas sin interes de <b>$25.500,00</b></p>
+          <p>$153000</p>
+        </div>
+        <div class="product">
+          <img src="./assets/imagenes/adidasRoja.jpg" alt="Zapatilla Adidas blanca" />
+          <h3>Zapatillas Adidas Rojas</h3>
+          <p>6 Cuotas sin interes de <b>$20.000,00</b></p>
+          <p>$120000</p>
+        </div>
+        <!-- Agrega más productos aquí -->
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
