ContenedorProducto en producto.html ahora se adapta a distintas pantallas

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
       <div class="products">
         <div class="product">
-          <a href="./producto.html"
+          <a href="./assets/paginas/producto.html"
             ><img
               src="./assets/imagenes/adidasZamba.png"
               alt="Zapatilla Adidas blanca"
@@ -97,107 +97,29 @@
           <p>6 Cuotas sin interes de <b>$20.000,00</b></p>
           <p>$120000</p>
         </div>
-        <!-- Agrega más productos aquí -->
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!--Nuevos lanzamientos
-        <div class="contenedorNuevosLanzamientos">
-          <div class="bannerNuevoLanzamientos">
-            <img
-              src="./assets/nuevosLanzamientos.png"
-              alt="Banner nuevos lanzamientos"
-            />
-          </div>
-          <div class="nuevosLanzamientos">
-            <a href="./producto.html"
-              ><img
-                src="./assets/zapatillasAdidas.png"
-                alt="Imagen de Zapatillas Adidas "
-            /></a>
-            <p>Zapatillas Tenis Adidas Samba</p>
-            <p>12 cuotas sin interes de $20.568,25</p>
-            <p>$246.819,00</p>
-          </div>
-          <div class="nuevosLanzamientos">
-            <a href="./producto.html"
-              ><img
-                src="./assets/zapatillasAdidas.png"
-                alt="Imagen de Zapatillas Adidas "
-            /></a>
-            <p>Zapatillas Tenis Adidas Samba</p>
-            <p>12 cuotas sin interes de $20.568,25</p>
-            <p>$246.819,00</p>
-          </div>
-        </div>
+    <!--Pie de pagina-->
+    <footer class="pieDePagina">
+      <div class="contenedorLogoPiePagina">
+        <a
+          ><img src="./assets/imagenes/nuevoLogo.png" alt="Logo logoClothingStore"
+        /></a>
       </div>
-    </main>-->
-    <!--Pie de pagina
-    <footer>
-      <div class="pieDePagina">
-        <div class="contenedorLogoPieDePagina">
-          <a href="./index.html"
-            ><img
-              src="./assets/logoSinFondo.png"
-              alt="Logo de tienda Clothing Store"
-          /></a>
-        </div>
-        <div class="contenedorInformación">
-          <p class="pesado">Información</p>
-          <ul>
-            <li><a href="./index.html">¿Quienes somos?</a></li>
-            <li><a href="./index.html">Sucursales</a></li>
-            <li><a href="./index.html">Termino y condiciones</a></li>
-          </ul>
-        </div>
-        <div class="contenedorAyuda">
-          <p class="pesado">Ayuda</p>
-          <ul>
-            <li><a href="index.html">¿Cómo comprar?</a></li>
-          </ul>
-        </div>
-        <div class="contenedorRedSocial">
-          <p class="pesado">Seguinos</p>
-          <a href="index.html"
-            ><img src="./assets/instagram.png" alt="Logo de instagram"
-          /></a>
-        </div>
+      <div class="contenedorInformacion">
+        <p><b class="tituloPiePagina">Información</b></p>
+        <a href="./index.html">¿Quienes somos?</a>
+        <a href="./index.html">Nuestras sucursales</a>
+        <a href="./index.html">Terminos y condiciones</a>
       </div>
-      <div class="copyright">
-        <p>©CLOTHING STORE - TODOS LOS DERECHOS RESERVADOS</p>
+      <div class="contenedorAyuda">
+        <p><b class="tituloPiePagina">Ayuda</b></p>
+        <a href="./index.html">¿Cómo comprar?</a>
       </div>
-    </footer>-->
+      <div class="contenedorRedesSociales">
+        <p><b class="tituloPiePagina">Redes Sociales</b></p>
+        <a href="./index.html"><img src="./assets/imagenes/logoIg.png" /></a>
+      </div>
+    </footer>
   </body>
 </html>
