--- a/assets/paginas/producto.html
+++ b/assets/paginas/producto.html
@@ -3,97 +3,73 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../../estilo.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Clothing Store</title>
     <title>Producto</title>
   </head>
   <body>
     <header>
-      <header class="header">
-        <!--topBar-->
-        <div class="topBar">
-          <div class="topBarLeft">
-            <img
-              src="./assets/logoConFondo.jpg"
-              alt="Logo de tienda Clothing Store"
-            />
-          </div>
-          <div class="topBarRight">
-            <a href="./producto.html"
-              ><img
-                src="./assets/location.png"
-                alt="Icono de Locación"
-              />Sucursal</a
-            >
-          </div>
+      <div class="header">
+        <!--Logo-->
+        <div class="contenedorLogo">
+          <a href="../../index.html"><img src="../imagenes/nuevoLogo.png" /></a>
         </div>
-        <!---->
-        <!--ENCABEZADO-->
-        <div class="encabezado">
-          <div class="contenedorLogo">
-            <a href="./producto.html"
-              ><img
-                src="./assets/logoSinFondo.png"
-                alt="Logo de tienda Clothing Store"
-            /></a>
-          </div>
+        <!--Items usuario-->
+        <div class="contenedorUsuario">
+          <img src="../imagenes/corazon.png" alt="Icono corazón" />
+          <a class="roboto">Favoritos</a>
+          <img src="../imagenes/perfil.png" alt="Icono perfil" />
+          <a>Mi cuenta</a>
+        </div>
+        <div class="contenedorBuscador">
           <!--Buscador-->
           <div class="contenedorBuscador">
             <input
               type="text"
-              id="search"
-              placeholder="Buscar..."
-              class="search-input"
+              class="text-input"
+              placeholder="Busca un producto"
             />
-          </div>
-          <!--favoritos-->
-          <div class="contenedorFavoritos">
-            <a href="./producto.html"><img src="./assets/corazon.png" />Favoritos</a>
-          </div>
-          <!--Perfil-->
-          <div class="contenedorPerfil">
-            <a href="./login.html"><img src="./assets/perfil.png" />Cuenta</a>
+            <button class="submit-button">Buscar</button>
           </div>
         </div>
-        <!--Categorias-->
-        <div class="contenedorCategorias">
-          <div class="menu">
-            <a href="./producto.html"><p>Hombre</p></a>
-            <a href="./producto.html"><p>Mujer</p></a>
-            <a href="./producto.html"><p>Niños</p></a>
-            <a href="./producto.html"><p>Deportes</p></a>
-            <a href="./producto.html"><p>Marcas</p></a>
-            <button>OFERTAS!</button>
-          </div>
-        </div>
-      </header>
+      </div>
     </header>
-    <!--Detalles del producto-->
-    <main>
-      <div class="producto">
+    <main class="mainProducto">
+      <div class="contenedorProducto">
         <div class="contenedorImagenesProducto">
           <img
-            src="./assets/zapatillasAdidas.png"
-            alt="Imagen de zapatilla Adidas"
+            src="../imagenes/adidasZamba.png"
+            alt="Imagen zapatilla adidas zamba"
           />
           <img
-            src="./assets/zapatillasAdidas.png"
-            alt="Imagen de zapatilla Adidas"
+            src="../imagenes/adidasZamba.png"
+            alt="Imagen zapatilla adidas zamba"
           />
           <img
-            src="./assets/zapatillasAdidas.png"
-            alt="Imagen de zapatilla Adidas"
+            src="../imagenes/adidasZamba.png"
+            alt="Imagen zapatilla adidas zamba"
           />
         </div>
         <div class="contenedorImagenPrincipal">
-          <img src="./assets/zapatillasAdidas.png" alt="" />
+          <img
+            src="../imagenes/adidasZamba.png"
+            alt="Imagen zapatilla adidas zamba"
+          />
         </div>
-        <div class="detallesProducto">
-          <p>Zapatillas tenis adidas samba GS BG</p>
-          <p>12 Cuotas sin interés de $20.568,25</p>
-          <p>246.819,00</p>
-          <br />
-          <p>Talles</p>
-          <div class="contenedorTalles">
+        <div class="contenedorDetalle">
+          <div>
+            <p>Zapatillas tenis adidas samba GS BG</p>
+            <p>12 Cuotas sin interés de $20.568,25</p>
+            <p>246.819,00</p>
+          </div>
+          <div class="contenedorTalle">
+            <p>Talles</p>
             <p>39</p>
             <p>39,5</p>
             <p>40</p>
@@ -103,104 +79,27 @@
             <p>42,5</p>
             <p>43</p>
           </div>
-          <!--Selector de talle-->
-          <div class="numeric-stepper">
-            <button class="stepper-btn">-</button>
-            <input type="number" class="stepper-input" value="1" readonly />
-            <button class="stepper-btn">+</button>
+          <!--Selector de cantidad-->
+          <div class="contenedorCantidad">
+            <div class="botonCantidad">
+              <button>-</button>
+              <p>1</p>
+              <button>+</button>
+            </div>
+            <a href="carrito.html"
+              ><button id="agregarCarrito">Agregar al carrito</button></a
+            >
           </div>
-          <a href="./carrito.html"><button>Añadir al carrito</button></a>
-          <br />
-          <br />
-          <p>Aproveche nuestras promociones</p>
-          <!--Tarjetas-->
-          <div class="contenedorPromociones">
-            <img src="./assets/visa.png" />
-            <img src="./assets/visa.png" />
+          <div class="contenedorMetodosPagos">
+            <p><b>Aprovecha nuestras promociones</b></p>
+            <div class="contenedorPromociones">
+              <button><img src="../imagenes/mastercard.png" /></button>
+              <button><img src="../imagenes/mastercard.png" /></button>
+              <button><img src="../imagenes/mastercard.png" /></button>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="contenedorTexto">
-        <a href="./producto.html"><p>Quizas te pueda interezar</p></a>
-      </div>
-      <div class="contenedorProductosRelacionados">
-        <div class="itemRelacionado">
-          <a href="./producto.html"
-            ><img
-              src="./assets/zapatillasAdidas.png"
-              alt="Imagen de Zapatillas Adidas "
-          /></a>
-          <p>Zapatillas Tenis Adidas Samba</p>
-          <p>12 cuotas sin interes de $20.568,25</p>
-          <p>$246.819,00</p>
-        </div>
-        <!--Items relacionados-->
-        <div class="itemRelacionado">
-          <a href="./producto.html"
-            ><img
-              src="./assets/zapatillasAdidas.png"
-              alt="Imagen de Zapatillas Adidas "
-          /></a>
-          <p>Zapatillas Tenis Adidas Samba</p>
-          <p>12 cuotas sin interes de $20.568,25</p>
-          <p>$246.819,00</p>
-        </div>
-        <div class="itemRelacionado">
-          <a href="./producto.html"
-            ><img
-              src="./assets/zapatillasAdidas.png"
-              alt="Imagen de Zapatillas Adidas "
-          /></a>
-          <p>Zapatillas Tenis Adidas Samba</p>
-          <p>12 cuotas sin interes de $20.568,25</p>
-          <p>$246.819,00</p>
-        </div>
-        <div class="itemRelacionado">
-          <a href="./producto.html"
-            ><img
-              src="./assets/zapatillasAdidas.png"
-              alt="Imagen de Zapatillas Adidas "
-          /></a>
-          <p>Zapatillas Tenis Adidas Samba</p>
-          <p>12 cuotas sin interes de $20.568,25</p>
-          <p>$246.819,00</p>
         </div>
       </div>
     </main>
-    <!--Pie de pagina-->
-    <footer>
-      <div class="pieDePagina">
-        <div class="contenedorLogoPieDePagina">
-          <a href="./index.html"
-            ><img
-              src="./assets/logoSinFondo.png"
-              alt="Logo de tienda Clothing Store"
-          /></a>
-        </div>
-        <div class="contenedorInformación">
-          <p class="pesado">Información</p>
-          <ul>
-            <li><a href="./index.html">¿Quienes somos?</a></li>
-            <li><a href="./index.html">Sucursales</a></li>
-            <li><a href="./index.html">Termino y condiciones</a></li>
-          </ul>
-        </div>
-        <div class="contenedorAyuda">
-          <p class="pesado">Ayuda</p>
-          <ul>
-            <li><a href="index.html">¿Cómo comprar?</a></li>
-          </ul>
-        </div>
-        <div class="contenedorRedSocial">
-          <p class="pesado">Seguinos</p>
-          <a href="index.html"
-            ><img src="./assets/instagram.png" alt="Logo de instagram"
-          /></a>
-        </div>
-      </div>
-      <div class="copyright">
-        <p>©CLOTHING STORE - TODOS LOS DERECHOS RESERVADOS</p>
-      </div>
-    </footer>
   </body>
 </html>
