Se ha agregado footer en producto.html

--- a/assets/paginas/producto.html
+++ b/assets/paginas/producto.html
@@ -100,6 +100,52 @@
           </div>
         </div>
       </div>
+      <!--Sugerencia-->
+      <div class="contenedorTextoSugerencia">
+        <p>QUIZÁS TE PUEDA INTERESAR</p>
+      </div>
+      <div class="contenedorProductosRelacionados">
+        <div class="itemRelacionado">
+          <a href="./producto.html"><img src="../imagenes/adidasRoja.jpg"></a>
+          <p>ZAPATILLAS TENIS ADIDAS SAMBA GS BG</p>
+          <p><b>12 CUOTAS SIN INTERÉS DE $20.500,00</b></p>
+          <p>246.000,00</p>
+        </div>
+        <div class="itemRelacionado">
+          <a href="./producto.html"><img src="../imagenes/zapatillaAdidasAzul.png"></a>
+          <p>ZAPATILLAS TENIS ADIDAS SAMBA GS BG</p>
+          <p><b>12 CUOTAS SIN INTERÉS DE $20.500,00</b></p>
+          <p>246.000,00</p>
+        </div>
+        <div class="itemRelacionado">
+          <a href="./producto.html"><img src="../imagenes/adidasZamba.png"></a>
+          <p>ZAPATILLAS TENIS ADIDAS SAMBA GS BG</p>
+          <p><b>12 CUOTAS SIN INTERÉS DE $20.500,00</b></p>
+          <p>246.000,00</p>
+        </div>
+      </div>
     </main>
+    <!--Pie de pagina-->
+    <footer class="pieDePagina">
+      <div class="contenedorLogoPiePagina">
+        <a
+          ><img src="../imagenes/nuevoLogo.png" alt="Logo logoClothingStore"
+        /></a>
+      </div>
+      <div class="contenedorInformacion">
+        <p><b class="tituloPiePagina">Información</b></p>
+        <a href="./index.html">¿Quienes somos?</a>
+        <a href="./index.html">Nuestras sucursales</a>
+        <a href="./index.html">Terminos y condiciones</a>
+      </div>
+      <div class="contenedorAyuda">
+        <p><b class="tituloPiePagina">Ayuda</b></p>
+        <a href="./index.html">¿Cómo comprar?</a>
+      </div>
+      <div class="contenedorRedesSociales">
+        <p><b class="tituloPiePagina">Redes Sociales</b></p>
+        <a href="./index.html"><img src="../imagenes/logoIg.png" /></a>
+      </div>
+    </footer>
   </body>
 </html>
