Se ha agregado encabezado en carrito.html correctament

--- a/assets/paginas/carrito.html
+++ b/assets/paginas/carrito.html
@@ -3,85 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../../estilo.css" />
     <title>Carrito</title>
   </head>
   <body>
-    <header class="header">
-      <!-- ENCABEZADO -->
-      <div class="encabezadoCarrito">
-        <div class="contenedorLogo">
-          <a href="./index.html">
-            <img
-              src="./assets/logoSinFondo.png"
-              alt="Logo de tienda Clothing Store"
-            />
-          </a>
-        </div>
-        <!-- Perfil -->
-        <div class="contenedorPerfil">
-          <a href="./index.html">
-            <img src="./assets/candado.png" alt="Ícono de candado" />
-            COMPRA SEGURA
-          </a>
-        </div>
+   <!--Encabezado-->
+   <header>
+    <div class="encabezadoCarrito">
+      <!--Logo-->
+      <div class="contenedorLogoCarrito">
+        <a href="./index.html"><img src="../imagenes/nuevoLogo.png" /></a>
       </div>
-    </header>
-    <main>
-      <!--Carrito de compras-->
-      <div class="carritoDeCompras">
-        <h1>Carrito de Compras</h1>
-        <br />
-        <!--Tabla de carrito-->
-        <table>
-          <thead>
-            <tr>
-              <th>Producto</th>
-              <th>Envío</th>
-              <th>Precio</th>
-              <th>Cantidad</th>
-              <th>Total</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>
-                <img
-                  src="./assets/zapatillasAdidas.png"
-                  alt="Imagen de zapatillas adidas"
-                />
-                Zapatillas tenis adidas
-              </td>
-              <td>A calcular</td>
-              <td>$246.819,00</td>
-              <td>1</td>
-              <td>$246.819,00</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <!--Entrega-->
-      <div class="finalizarCompra">
-        <div class="entrega">
-            <h2>Entrega</h2>
-            <br>
-            <p>Vea todas las opciones de envío para sus productos, incluyendo los plasos y los precios de envío</p>
-            <br>
-            <button>Calcular envio</button>
+      <!--Compra segura-->
+      <div class="contenedorCompraSegura">
+          <img src="../imagenes/candado.png">
+          <p><b>Compra segura</b></p>
         </div>
-        <div class="precio">
-            <h3>Subtotal</h3>
-            <p>$246.819,00</p>
-            <br>
-            <h3>Total</h3>
-            <p>$246.819,00</p>
-            <br>
-            <button id="btnFinalizarCompra">Finalizar Compra</button>
-            <br>
-            <br>
-            <a href="./index.html"><button id="btnElegirProductos">Elegir más productos</button></a>
-        </div>
-      </div>
+    </div>
+  </header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </main>
     <!--Pie de pagina-->
     <footer>
