Se ha agregado detalleCarrito en carrito.html

--- a/assets/paginas/carrito.html
+++ b/assets/paginas/carrito.html
@@ -12,7 +12,7 @@
     <div class="encabezadoCarrito">
       <!--Logo-->
       <div class="contenedorLogoCarrito">
-        <a href="./index.html"><img src="../imagenes/nuevoLogo.png" /></a>
+        <a href="../../index.html"><img src="../imagenes/nuevoLogo.png" /></a>
       </div>
       <!--Compra segura-->
       <div class="contenedorCompraSegura">
@@ -21,23 +21,65 @@
         </div>
     </div>
   </header>
+  <main>
+    <div class="contenedorTextoCarrito">
+      <b><p>Carrito de compras</p></b>
+    </div>
+    <div class="tabla-responsive">
+      <table>
+        <thead>
+          <tr>
+            <th>Producto</th>
+            <th>Envío</th>
+            <th>Precio</th>
+            <th>Cantidad</th>
+            <th>Total</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <img
+                src="../imagenes/adidasZamba.png"
+                alt="Imagen de zapatillas adidas"
+                class="producto-img"
+              />
+              Zapatillas tenis adidas
+            </td>
+            <td>A calcular</td>
+            <td>$246.819,00</td>
+            <td>1</td>
+            <td>$246.819,00</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+        <br>
+        <div class="contenedorDetalleCarrito">
+          <div class="contenedorEntrega">
+            <p class="titulosCarrito">Entrega</p>
+            <br>
+            <p class="textoEnvio">Vea todas las opciones de envio para sus productos, incluyendo los plazos y los precios de envío</p>
+            <br>
+            <button>Calcular envio</button>
+          </div>
+          <div class="contenedorResumen">
+            <div class="contenedorItemResumen">
+              <p class="titulosCarrito">Subtotal</p>
+              <p>246.819,00</p>
+            </div>
+            <div class="contenedorItemResumen">
+              <p class="titulosCarrito">Total</p>
+              <p>246.819,00</p>
+            </div>
+            <div class="contenedorBotonesCompra">
+              <button>Finalizar Compra</button>
+              <button>Elegir más productos</button>
+            </div>
+          </div>
+        </div>
+  </main>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </main>
     <!--Pie de pagina-->
     <footer>
         <div class="pieDePagina">
