Se ha agregado footer en carrito.html

--- a/assets/paginas/carrito.html
+++ b/assets/paginas/carrito.html
@@ -79,41 +79,27 @@
           </div>
         </div>
   </main>
-
-    <!--Pie de pagina-->
-    <footer>
-        <div class="pieDePagina">
-          <div class="contenedorLogoPieDePagina">
-            <a href="./index.html"
-              ><img
-                src="./assets/logoSinFondo.png"
-                alt="Logo de tienda Clothing Store"
-            /></a>
-          </div>
-          <div class="contenedorInformación">
-            <p class="pesado">Información</p>
-            <ul>
-              <li><a href="./index.html">¿Quienes somos?</a></li>
-              <li><a href="./index.html">Sucursales</a></li>
-              <li><a href="./index.html">Termino y condiciones</a></li>
-            </ul>
-          </div>
-          <div class="contenedorAyuda">
-            <p class="pesado">Ayuda</p>
-            <ul>
-              <li><a href="index.html">¿Cómo comprar?</a></li>
-            </ul>
-          </div>
-          <div class="contenedorRedSocial">
-            <p class="pesado">Seguinos</p>
-            <a href="index.html"
-              ><img src="./assets/instagram.png" alt="Logo de instagram"
-            /></a>
-          </div>
-        </div>
-        <div class="copyright">
-          <p>©CLOTHING STORE - TODOS LOS DERECHOS RESERVADOS</p>
-        </div>
-      </footer>
+   <!--Pie de pagina-->
+   <footer class="pieDePagina">
+    <div class="contenedorLogoPiePagina">
+      <a
+        ><img src="../imagenes/nuevoLogo.png" alt="Logo logoClothingStore"
+      /></a>
+    </div>
+    <div class="contenedorInformacion">
+      <p><b class="tituloPiePagina">Información</b></p>
+      <a href="./index.html">¿Quienes somos?</a>
+      <a href="./index.html">Nuestras sucursales</a>
+      <a href="./index.html">Terminos y condiciones</a>
+    </div>
+    <div class="contenedorAyuda">
+      <p><b class="tituloPiePagina">Ayuda</b></p>
+      <a href="./index.html">¿Cómo comprar?</a>
+    </div>
+    <div class="contenedorRedesSociales">
+      <p><b class="tituloPiePagina">Redes Sociales</b></p>
+      <a href="./index.html"><img src="../imagenes/logoIg.png" /></a>
+    </div>
+  </footer>
   </body>
 </html>
