--- a/assets/paginas/inicioSesion.html
+++ b/assets/paginas/inicioSesion.html
@@ -23,7 +23,7 @@
         </div>
         <div class="contenedorInput">
           <p>Contraseña</p>
-          <input type="text" />
+          <input type="password" />
         </div>
         <div class="contenedorBotonesRegistro">
             <button class="botonVolver">Volver</button>
