Se ha agregado resgistro.html correctamente

--- a/assets/paginas/registro.html
+++ b/assets/paginas/registro.html
@@ -27,10 +27,10 @@
         </div>
         <div class="contenedorBotonesRegistro">
             <button class="botonVolver">Volver</button>
-            <button class="botonSucces">Ingresar</button>
+            <button class="botonSucces">Crear cuenta</button>
         </div>
         <div>
-          <p>¿No tienes una cuenta? <a href="../paginas/registro.html">Crea una ahora</a></p>
+          <p>¿Tienes una cuenta? <a href="../paginas/inicioSesion.html">Ingresar</a></p>
         </div>
       </div>
     </main>
