--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="./assets/imagenes/corazon.png" alt="Icono corazón">
         <a class="roboto">Favoritos</a>
         <img src="./assets/imagenes/perfil.png" alt="Icono perfil">
-        <a>Mi cuenta</a>
+        <a href="./assets/paginas/inicioSesion.html">Mi cuenta</a>
       </div>
       <div class="contenedorBuscador"> 
         <!--Buscador-->
