Se han agregado enlaces en los logos de tienda en registro.html

--- a/assets/paginas/registro.html
+++ b/assets/paginas/registro.html
@@ -11,7 +11,7 @@
       <div class="header">
         <!--Logo-->
         <div class="contenedorLogo">
-          <img src="../imagenes/nuevoLogo.png" />
+          <a href="../../index.html"><img src="../imagenes/nuevoLogo.png" /></a>
         </div>
       </div>
     </header>
@@ -37,7 +37,7 @@
     <!--Pie de pagina-->
     <footer class="pieDePagina">
         <div class="contenedorLogoPiePagina">
-          <a
+          <a href="../../index.html"
             ><img src="../imagenes/nuevoLogo.png" alt="Logo logoClothingStore"
           /></a>
         </div>
