Se han agregado enlaces en los logos de de tienda en inicioSesion.html

--- a/assets/paginas/inicioSesion.html
+++ b/assets/paginas/inicioSesion.html
@@ -11,7 +11,7 @@
       <div class="header">
         <!--Logo-->
         <div class="contenedorLogo">
-          <img src="../imagenes/nuevoLogo.png" />
+          <a><img src="../imagenes/nuevoLogo.png" /></a>
         </div>
       </div>
     </header>
