Se han corregido enlaces en logos en inicioSesion.html

--- a/assets/paginas/inicioSesion.html
+++ b/assets/paginas/inicioSesion.html
@@ -11,7 +11,7 @@
       <div class="header">
         <!--Logo-->
         <div class="contenedorLogo">
-          <a><img src="../imagenes/nuevoLogo.png" /></a>
+          <a href="../../index.html"><img src="../imagenes/nuevoLogo.png" /></a>
         </div>
       </div>
     </header>
