Se han corregido enlaces en logos en inicioSesion.html

--- a/assets/paginas/inicioSesion.html
+++ b/assets/paginas/inicioSesion.html
@@ -53,7 +53,7 @@
         </div>
         <div class="contenedorRedesSociales">
           <p><b class="tituloPiePagina">Redes Sociales</b></p>
-          <a href="./index.html"><img src="../imagenes/logoIg.png" /></a>
+          <a href="../../index.html"><img src="../imagenes/logoIg.png" /></a>
         </div>
       </footer>
   </body>
