Se han corregido enlace en logo tienda en footer de inicioSesion.html

--- a/assets/paginas/inicioSesion.html
+++ b/assets/paginas/inicioSesion.html
@@ -37,7 +37,7 @@
     <!--Pie de pagina-->
     <footer class="pieDePagina">
         <div class="contenedorLogoPiePagina">
-          <a
+          <a href="../../index.html"
             ><img src="../imagenes/nuevoLogo.png" alt="Logo logoClothingStore"
           /></a>
         </div>
@@ -53,7 +53,7 @@
         </div>
         <div class="contenedorRedesSociales">
           <p><b class="tituloPiePagina">Redes Sociales</b></p>
-          <a href="../../index.html"><img src="../imagenes/logoIg.png" /></a>
+          <a href="./index.html"><img src="../imagenes/logoIg.png" /></a>
         </div>
       </footer>
   </body>
