Se han agregado comentarios en index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
   <header>
+    <!--Encabezado-->
     <div class="header">
       <!--Logo-->
       <div class="contenedorLogo">
@@ -102,20 +103,24 @@
     <!--Pie de pagina-->
     <footer class="pieDePagina">
       <div class="contenedorLogoPiePagina">
+        <!--Logo-->
         <a
           ><img src="./assets/imagenes/nuevoLogo.png" alt="Logo logoClothingStore"
         /></a>
       </div>
+      <!--Información-->
       <div class="contenedorInformacion">
         <p><b class="tituloPiePagina">Información</b></p>
         <a href="./index.html">¿Quienes somos?</a>
         <a href="./index.html">Nuestras sucursales</a>
         <a href="./index.html">Terminos y condiciones</a>
       </div>
+      <!--Ayuda-->
       <div class="contenedorAyuda">
         <p><b class="tituloPiePagina">Ayuda</b></p>
         <a href="./index.html">¿Cómo comprar?</a>
       </div>
+      <!--Redes sociales-->
       <div class="contenedorRedesSociales">
         <p><b class="tituloPiePagina">Redes Sociales</b></p>
         <a href="./index.html"><img src="./assets/imagenes/logoIg.png" /></a>
