Se han solicionado enlaces en index.html

--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
           <p>$180000</p>
         </div>
         <div class="product">
-          <img
+          <a href="./assets/paginas/producto.html"><img
             src="./assets/imagenes/zapatillaAdidasAzul.png"
             alt="Zapatilla Adidas azul"
-          />
+          /></a>
           <h3>Zapatillas deportivas Adidas azul</h3>
           <p>6 Cuotas sin interes de <b>$25.500,00</b></p>
           <p>$153000</p>
         </div>
         <div class="product">
-          <img src="./assets/imagenes/adidasRoja.jpg" alt="Zapatilla Adidas blanca" />
+          <a href="./assets/paginas/producto.html"><img src="./assets/imagenes/adidasRoja.jpg" alt="Zapatilla Adidas blanca" /></a>
           <h3>Zapatillas Adidas Rojas</h3>
           <p>6 Cuotas sin interes de <b>$20.000,00</b></p>
           <p>$120000</p>
