cambios en nombres de productos relacionados en producto.html

--- a/assets/paginas/producto.html
+++ b/assets/paginas/producto.html
@@ -107,15 +107,15 @@
       <div class="contenedorProductosRelacionados">
         <div class="itemRelacionado">
           <a href="./producto.html"><img src="../imagenes/adidasRoja.jpg"></a>
-          <p>ZAPATILLAS TENIS ADIDAS SAMBA GS BG</p>
-          <p><b>12 CUOTAS SIN INTERÉS DE $20.500,00</b></p>
-          <p>246.000,00</p>
+          <p>ZAPATILLAS DEPORTIVAS ADIDAS ROJAS</p>
+          <p><b>6 CUOTAS SIN INTERÉS DE $20.000,00</b></p>
+          <p>120.000,00</p>
         </div>
         <div class="itemRelacionado">
           <a href="./producto.html"><img src="../imagenes/zapatillaAdidasAzul.png"></a>
-          <p>ZAPATILLAS TENIS ADIDAS SAMBA GS BG</p>
-          <p><b>12 CUOTAS SIN INTERÉS DE $20.500,00</b></p>
-          <p>246.000,00</p>
+          <p>ZAPATILLAS DEPORTIVAS ADIDAS AZUL </p>
+          <p><b>6 CUOTAS SIN INTERÉS DE $25.000,00</b></p>
+          <p>153.000,00</p>
         </div>
         <div class="itemRelacionado">
           <a href="./producto.html"><img src="../imagenes/adidasZamba.png"></a>
