Cambios en producto.html

--- a/assets/paginas/producto.html
+++ b/assets/paginas/producto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../css/estilo.css" />
+    <link rel="stylesheet" href="../../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,19 +16,20 @@
   </head>
   <body>
     <header>
+      <!--Encabezado-->
       <div class="header">
         <!--Logo-->
         <div class="contenedorLogo">
-          <a href="../../index.html"><img src="../imagenes/nuevoLogo.png" /></a>
+          <img src="../imagenes/nuevoLogo.png">
         </div>
         <!--Items usuario-->
         <div class="contenedorUsuario">
-          <img src="../imagenes/corazon.png" alt="Icono corazón" />
+          <img src="../imagenes/corazon.png" alt="Icono corazón">
           <a class="roboto">Favoritos</a>
-          <img src="../imagenes/perfil.png" alt="Icono perfil" />
-          <a>Mi cuenta</a>
+          <img src="../imagenes/perfil.png" alt="Icono perfil">
+          <a href="./assets/paginas/inicioSesion.html">Mi cuenta</a>
         </div>
-        <div class="contenedorBuscador">
+        <div class="contenedorBuscador"> 
           <!--Buscador-->
           <div class="contenedorBuscador">
             <input
@@ -39,7 +41,7 @@
           </div>
         </div>
       </div>
-    </header>
+    </header>    
     <main class="mainProducto">
       <div class="contenedorProducto">
         <div class="contenedorImagenesProducto">
