Cambios en producto.html

--- a/assets/paginas/producto.html
+++ b/assets/paginas/producto.html
@@ -20,14 +20,14 @@
       <div class="header">
         <!--Logo-->
         <div class="contenedorLogo">
-          <img src="../imagenes/nuevoLogo.png">
+          <a href="../../index.html"><img src="../imagenes/nuevoLogo.png"></a>
         </div>
         <!--Items usuario-->
         <div class="contenedorUsuario">
           <img src="../imagenes/corazon.png" alt="Icono corazón">
           <a class="roboto">Favoritos</a>
           <img src="../imagenes/perfil.png" alt="Icono perfil">
-          <a href="./assets/paginas/inicioSesion.html">Mi cuenta</a>
+          <a href="../paginas/inicioSesion.html">Mi cuenta</a>
         </div>
         <div class="contenedorBuscador"> 
           <!--Buscador-->
