--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header">
       <!--Logo-->
       <div class="contenedorLogo">
-        <img src="./assets/imagenes/nuevoLogo.png">
+        <img src="./assets/imagenes/nuevoLogo.png" alt="Imagen logo tienda 'Online Store'">
       </div>
       <!--Items usuario-->
       <div class="contenedorUsuario">
@@ -69,7 +69,7 @@
     <!--Nuevos lanzamientos-->
     <div class="main-container">
       <div class="banner">
-        <img src="./assets/imagenes/nuevoLanzamientos.png" />
+        <img src="./assets/imagenes/nuevoLanzamientos.png" alt="Imagen promocional de nuevos lanzamientos"/>
       </div>
       <div class="products">
         <div class="product">
@@ -123,7 +123,7 @@
       <!--Redes sociales-->
       <div class="contenedorRedesSociales">
         <p><b class="tituloPiePagina">Redes Sociales</b></p>
-        <a href="./index.html"><img src="./assets/imagenes/logoIg.png" /></a>
+        <a href="./index.html"><img src="./assets/imagenes/logoIg.png" alt="Logo instagram"/></a>
       </div>
     </footer>
   </body>
