Se han agregado atributo alt a todas las imagenes en carrito.html

--- a/assets/paginas/carrito.html
+++ b/assets/paginas/carrito.html
@@ -13,11 +13,11 @@
     <div class="encabezadoCarrito">
       <!--Logo-->
       <div class="contenedorLogoCarrito">
-        <a href="../../index.html"><img src="../imagenes/nuevoLogo.png" /></a>
+        <a href="../../index.html"><img src="../imagenes/nuevoLogo.png" alt="Logo tienda 'Online Store'"/></a>
       </div>
       <!--Compra segura-->
       <div class="contenedorCompraSegura">
-          <img src="../imagenes/candado.png">
+          <img src="../imagenes/candado.png" alt="Icono compra segura">
           <p><b>Compra segura</b></p>
         </div>
     </div>
@@ -84,7 +84,7 @@
    <footer class="pieDePagina">
     <div class="contenedorLogoPiePagina">
       <a
-        ><img src="../imagenes/nuevoLogo.png" alt="Logo logoClothingStore"
+        ><img src="../imagenes/nuevoLogo.png" alt="Logo tienda 'Online Store'"
       /></a>
     </div>
     <div class="contenedorInformacion">
@@ -99,7 +99,7 @@
     </div>
     <div class="contenedorRedesSociales">
       <p><b class="tituloPiePagina">Redes Sociales</b></p>
-      <a href="./index.html"><img src="../imagenes/logoIg.png" /></a>
+      <a href="./index.html"><img src="../imagenes/logoIg.png" alt="Icono instagram"/></a>
     </div>
   </footer>
   </body>
