--- a/assets/paginas/producto.html
+++ b/assets/paginas/producto.html
@@ -19,7 +19,7 @@
       <div class="header">
         <!--Logo-->
         <div class="contenedorLogo">
-          <a href="../../index.html"><img src="../imagenes/nuevoLogo.png"></a>
+          <a href="../../index.html"><img src="../imagenes/nuevoLogo.png" alt="Logo tienda 'Online Store'"></a>
         </div>
         <!--Items usuario-->
         <div class="contenedorUsuario">
@@ -94,9 +94,9 @@
           <div class="contenedorMetodosPagos">
             <p><b>Aprovecha nuestras promociones</b></p>
             <div class="contenedorPromociones">
-              <button><img src="../imagenes/mastercard.png" /></button>
-              <button><img src="../imagenes/mastercard.png" /></button>
-              <button><img src="../imagenes/mastercard.png" /></button>
+              <button><img src="../imagenes/mastercard.png" alt="Icono mastercard"/></button>
+              <button><img src="../imagenes/mastercard.png" alt="Icono mastercard"/></button>
+              <button><img src="../imagenes/mastercard.png" alt="Icono mastercard"/></button>
             </div>
           </div>
         </div>
@@ -107,19 +107,19 @@
       </div>
       <div class="contenedorProductosRelacionados">
         <div class="itemRelacionado">
-          <a href="./producto.html"><img src="../imagenes/adidasRoja.jpg"></a>
+          <a href="./producto.html"><img src="../imagenes/adidasRoja.jpg" alt="Imagen Zapatatilla Adidas roja"></a>
           <p>ZAPATILLAS DEPORTIVAS ADIDAS ROJAS</p>
           <p><b>6 CUOTAS SIN INTERÉS DE $20.000,00</b></p>
           <p>120.000,00</p>
         </div>
         <div class="itemRelacionado">
-          <a href="./producto.html"><img src="../imagenes/zapatillaAdidasAzul.png"></a>
+          <a href="./producto.html"><img src="../imagenes/zapatillaAdidasAzul.png" alt="Imagen Zapatatilla Adidas azul"></a>
           <p>ZAPATILLAS DEPORTIVAS ADIDAS AZUL </p>
           <p><b>6 CUOTAS SIN INTERÉS DE $25.000,00</b></p>
           <p>153.000,00</p>
         </div>
         <div class="itemRelacionado">
-          <a href="./producto.html"><img src="../imagenes/adidasZamba.png"></a>
+          <a href="./producto.html"><img src="../imagenes/adidasZamba.png" alt="Imagen Zapatatilla Adidas samba"></a>
           <p>ZAPATILLAS TENIS ADIDAS SAMBA GS BG</p>
           <p><b>12 CUOTAS SIN INTERÉS DE $20.500,00</b></p>
           <p>246.000,00</p>
@@ -145,7 +145,7 @@
       </div>
       <div class="contenedorRedesSociales">
         <p><b class="tituloPiePagina">Redes Sociales</b></p>
-        <a href="./index.html"><img src="../imagenes/logoIg.png" /></a>
+        <a href="./index.html"><img src="../imagenes/logoIg.png" alt="Icono instagram" /></a>
       </div>
     </footer>
   </body>
