Se han agregado atributo alt a todas las imagenes en registro.html

--- a/assets/paginas/registro.html
+++ b/assets/paginas/registro.html
@@ -11,7 +11,7 @@
       <div class="header">
         <!--Logo-->
         <div class="contenedorLogo">
-          <a href="../../index.html"><img src="../imagenes/nuevoLogo.png" /></a>
+          <a href="../../index.html"><img src="../imagenes/nuevoLogo.png" alt="Logo tienda 'Online Store'"/></a>
         </div>
       </div>
     </header>
@@ -38,7 +38,7 @@
     <footer class="pieDePagina">
         <div class="contenedorLogoPiePagina">
           <a href="../../index.html"
-            ><img src="../imagenes/nuevoLogo.png" alt="Logo logoClothingStore"
+            ><img src="../imagenes/nuevoLogo.png" alt="Logo tienda 'Online Store'"
           /></a>
         </div>
         <div class="contenedorInformacion">
@@ -53,7 +53,7 @@
         </div>
         <div class="contenedorRedesSociales">
           <p><b class="tituloPiePagina">Redes Sociales</b></p>
-          <a href="./index.html"><img src="../imagenes/logoIg.png" /></a>
+          <a href="./index.html"><img src="../imagenes/logoIg.png" alt="Icono instagram"/></a>
         </div>
       </footer>
   </body>
