Se han agregado comentarios en Carrito.html

--- a/assets/paginas/carrito.html
+++ b/assets/paginas/carrito.html
@@ -8,99 +8,115 @@
     <title>Carrito</title>
   </head>
   <body>
-   <!--Encabezado-->
-   <header>
-    <div class="encabezadoCarrito">
-      <!--Logo-->
-      <div class="contenedorLogoCarrito">
-        <a href="../../index.html"><img src="../imagenes/nuevoLogo.png" alt="Logo tienda 'Online Store'"/></a>
-      </div>
-      <!--Compra segura-->
-      <div class="contenedorCompraSegura">
-          <img src="../imagenes/candado.png" alt="Icono compra segura">
+    <!--Encabezado-->
+    <header>
+      <div class="encabezadoCarrito">
+        <!--Logo-->
+        <div class="contenedorLogoCarrito">
+          <a href="../../index.html"
+            ><img
+              src="../imagenes/nuevoLogo.png"
+              alt="Logo tienda 'Online Store'"
+          /></a>
+        </div>
+        <!--Compra segura-->
+        <div class="contenedorCompraSegura">
+          <img src="../imagenes/candado.png" alt="Icono compra segura" />
           <p><b>Compra segura</b></p>
         </div>
-    </div>
-  </header>
-  <main>
-    <div class="contenedorTextoCarrito">
-      <b><p>Carrito de compras</p></b>
-    </div>
-    <div class="tabla-responsive">
-      <table>
-        <thead>
-          <tr>
-            <th>Producto</th>
-            <th>Envío</th>
-            <th>Precio</th>
-            <th>Cantidad</th>
-            <th>Total</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <img
-                src="../imagenes/adidasZamba.png"
-                alt="Imagen de zapatillas adidas"
-                class="producto-img"
-              />
-              Zapatillas tenis adidas
-            </td>
-            <td>A calcular</td>
-            <td>$246.819,00</td>
-            <td>1</td>
-            <td>$246.819,00</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-        <br>
-        <div class="contenedorDetalleCarrito">
-          <div class="contenedorEntrega">
-            <p class="titulosCarrito">Entrega</p>
-            <br>
-            <p class="textoEnvio">Vea todas las opciones de envio para sus productos, incluyendo los plazos y los precios de envío</p>
-            <br>
-            <button>Calcular envio</button>
+      </div>
+    </header>
+    <!--Contenido principal-->
+    <main>
+      <div class="contenedorTextoCarrito">
+        <b><p>Carrito de compras</p></b>
+      </div>
+      <!--Tabla-->
+      <div class="tabla-responsive">
+        <table>
+          <thead>
+            <tr>
+              <th>Producto</th>
+              <th>Envío</th>
+              <th>Precio</th>
+              <th>Cantidad</th>
+              <th>Total</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <img
+                  src="../imagenes/adidasZamba.png"
+                  alt="Imagen de zapatillas adidas"
+                  class="producto-img"
+                />
+                Zapatillas tenis adidas
+              </td>
+              <td>A calcular</td>
+              <td>$246.819,00</td>
+              <td>1</td>
+              <td>$246.819,00</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <br />
+      <!--Detalle Carrito-->
+      <div class="contenedorDetalleCarrito">
+        <div class="contenedorEntrega">
+          <p class="titulosCarrito">Entrega</p>
+          <br />
+          <p class="textoEnvio">
+            Vea todas las opciones de envio para sus productos, incluyendo los
+            plazos y los precios de envío
+          </p>
+          <br />
+          <button>Calcular envio</button>
+        </div>
+        <div class="contenedorResumen">
+          <div class="contenedorItemResumen">
+            <p class="titulosCarrito">Subtotal</p>
+            <p>246.819,00</p>
           </div>
-          <div class="contenedorResumen">
-            <div class="contenedorItemResumen">
-              <p class="titulosCarrito">Subtotal</p>
-              <p>246.819,00</p>
-            </div>
-            <div class="contenedorItemResumen">
-              <p class="titulosCarrito">Total</p>
-              <p>246.819,00</p>
-            </div>
-            <div class="contenedorBotonesCompra">
-              <button>Finalizar Compra</button>
-              <button>Elegir más productos</button>
-            </div>
+          <div class="contenedorItemResumen">
+            <p class="titulosCarrito">Total</p>
+            <p>246.819,00</p>
+          </div>
+          <div class="contenedorBotonesCompra">
+            <button>Finalizar Compra</button>
+            <button>Elegir más productos</button>
           </div>
         </div>
-  </main>
-   <!--Pie de pagina-->
-   <footer class="pieDePagina">
-    <div class="contenedorLogoPiePagina">
-      <a
-        ><img src="../imagenes/nuevoLogo.png" alt="Logo tienda 'Online Store'"
-      /></a>
-    </div>
-    <div class="contenedorInformacion">
-      <p><b class="tituloPiePagina">Información</b></p>
-      <a href="./index.html">¿Quienes somos?</a>
-      <a href="./index.html">Nuestras sucursales</a>
-      <a href="./index.html">Terminos y condiciones</a>
-    </div>
-    <div class="contenedorAyuda">
-      <p><b class="tituloPiePagina">Ayuda</b></p>
-      <a href="./index.html">¿Cómo comprar?</a>
-    </div>
-    <div class="contenedorRedesSociales">
-      <p><b class="tituloPiePagina">Redes Sociales</b></p>
-      <a href="./index.html"><img src="../imagenes/logoIg.png" alt="Icono instagram"/></a>
-    </div>
-  </footer>
+      </div>
+    </main>
+    <!--Pie de pagina-->
+    <footer class="pieDePagina">
+      <div class="contenedorLogoPiePagina">
+        <a
+          ><img
+            src="../imagenes/nuevoLogo.png"
+            alt="Logo tienda 'Online Store'"
+        /></a>
+      </div>
+      <!--Información-->
+      <div class="contenedorInformacion">
+        <p><b class="tituloPiePagina">Información</b></p>
+        <a href="./index.html">¿Quienes somos?</a>
+        <a href="./index.html">Nuestras sucursales</a>
+        <a href="./index.html">Terminos y condiciones</a>
+      </div>
+      <!--Ayuda-->
+      <div class="contenedorAyuda">
+        <p><b class="tituloPiePagina">Ayuda</b></p>
+        <a href="./index.html">¿Cómo comprar?</a>
+      </div>
+      <div class="contenedorRedesSociales">
+        <p><b class="tituloPiePagina">Redes Sociales</b></p>
+        <a href="./index.html"
+          ><img src="../imagenes/logoIg.png" alt="Icono instagram"
+        /></a>
+      </div>
+    </footer>
   </body>
 </html>
